Update dependency versions, and library files